fix: partners logos overlapping contact text

--- a/src/style/pages/Partners.css
+++ b/src/style/pages/Partners.css
@@ -1,6 +1,6 @@
 .partners {
     width: 100%;
-    height: var(--page-height);
+    height: max-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
